--- a/asset/styles/index.css
+++ b/asset/styles/index.css
@@ -36,6 +36,9 @@ a{
 li{
     list-style: none;
 }
+img{
+    border-radius: 4px;
+}
 /* NAVBAR */
 .navbar{
     position:sticky;
@@ -118,6 +121,22 @@ li{
     100%{
         left: 0%;
     }
+}
+.btn-cv{
+    display: block;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    border: 1px solid var(--color-dark);
+    background-color: var(--color-vlight);
+    margin-top: 3rem;
+}
+.btn-cv a{
+    color: var(--color-dark);
+    font-weight: 700;
+    font-family: var(--font-poppins);
+}
+.btn-cv:hover{
+    opacity: .7;
 }
 .social{
     font-size: 1.9rem;
